--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,10 +15,25 @@
         android:theme="@style/Theme.Hort"
         tools:targetApi="31">
         <activity
+            android:name=".PlantaExibe"
+            android:exported="false" />
+        <activity
+            android:name=".ReceitaExibe"
+            android:exported="false" />
+        <activity
+            android:name=".Alimento"
+            android:exported="false" />
+        <activity
+            android:name=".Planta"
+            android:exported="false" />
+        <activity
+            android:name=".PlantaView"
+            android:exported="false" />
+        <activity
             android:name=".CategoriaView"
             android:exported="false" />
         <activity
-            android:name=".receitaView"
+            android:name=".ReceitaView"
             android:exported="false" />
         <activity
             android:name=".wizzard.wizard2"
@@ -40,5 +57,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
